fixed wrong field alignment for center's addition pop-up

--- a/src/components/addCenter/css/AddCenter.css
+++ b/src/components/addCenter/css/AddCenter.css
@@ -42,10 +42,8 @@ and (max-device-width: 1080px) {
     text-align: left;
 }
 
-.addCenter .layout {
-    display: flex;
+.addCenter .ant-layout {
     flex-direction: row;
-    width: 100%;
 }
 
 .addCenter .content {
